--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,55 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    
+    '<title>Helios by HTML5 UP</title>'
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    </head>
 
-  <body>
-    <%= yield %>
+  <body class="homepage is-preload">
+      <div id="page-wrapper">
+
+        <!-- Header -->
+          <div id="header">
+
+            <!-- Nav -->
+              <nav id="nav">
+                <ul>
+                  <li><%=link_to "Home", root_path %></li>
+                  <li><%=link_to "Test", pages_test_path %></li>
+                  <li><%=link_to "Login", users_login_path %>></li>
+                  <li><%=link_to "About us", pages_about_us_path %></li>
+                </ul>
+              </nav>
+
+          </div>
+
+        <!-- Main -->
+          <div class="yield">
+            <%= yield %>
+          </div>
+
+        <!-- Footer -->
+          <div id="footer">
+          <!-- Copyright -->
+          <div class="copyright">
+            <ul class="menu">
+              <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+          </div>
+          </div>
+
+      <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.dropotron.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
   </body>
 </html>
